--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="content">
             <div class="column">
                 <h1>Информационные телеканалы</h1>
-                <h2>На русском языке</h2>
+                <h2>На русском</h2>
                     <div class="row">
                     <div class="row2">
                         <a href="watch.html?v=ntv" class="tvplate" id="ntv"><img src="cdn/ntv.svg"></a>
@@ -49,7 +49,11 @@
                         <a href="watch.html?v=m24" class="tvplate" id="m24"><img src="cdn/m24.svg"></a>
                         <a href="watch.html?v=spb6" class="tvplate" id="spb6"><img src="cdn/6.svg"></a>
                     </div>
-                    <a href="watch.html?v=cgtn" class="tvplate" id="cgtn"><img src="cdn/cgtn.svg"></a>
+                    <div class="row2">
+                        <a href="watch.html?v=ont" class="tvplate" id="ont"><img src="cdn/ont.svg" style="width: 100%;"></a>
+                        <a href="watch.html?v=stv" class="tvplate" id="stv"><img src="cdn/stv.svg" style="width: 80%;"></a>
+                    </div>
+                        <a href="watch.html?v=cgtn" class="tvplate" id="cgtn"><img src="cdn/cgtn.svg"></a>
                     </div>
                 <h2>На других языках</h2>
                 <div class="row">
@@ -63,11 +67,14 @@
                     </div>
                     <div class="row2">
                     <a href="watch.html?v=eu" class="tvplate" id="eu"><img src="cdn/eu.svg"></a>
+                    <a href="watch.html?v=ard" class="tvplate" id="ard"><img src="cdn/ard.svg"></a>
+                    </div>
+                    <div class="row2">
                     <a href="watch.html?v=alj" class="tvplate" id="alj"><img src="cdn/alj.svg"></a>
                     </div>
                 </div>
                 <h1>Развлекательные телеканалы</h1>
-                <h2>На русском языке</h2>
+                <h2>На русском</h2>
                 <div class="row">
                     <div class="row2">
                         <a href="watch.html?v=tnt" class="tvplate" id="tnt"><img src="cdn/tnt.svg"></a>
@@ -84,7 +91,10 @@
                         <a href="watch.html?v=mtv" class="tvplate" id="mtv"><img src="cdn/mtv.svg"></a>
                         <a href="watch.html?v=his" class="tvplate" id="his"><img src="cdn/his.svg"></a>
                     </div>
-                    <a href="watch.html?v=ch4" class="tvplate" id="ch4"><img src="cdn/4.svg"></a>
+                    <div class="row2">
+                        <a href="watch.html?v=zdf" class="tvplate" id="zdf"><img src="cdn/zdf.svg"></a>
+                        <a href="watch.html?v=ch4" class="tvplate" id="ch4"><img src="cdn/4.svg"></a>
+                    </div>
                 </div>
             </div>
         </div>
