--- a/watch.html
+++ b/watch.html
@@ -80,6 +80,16 @@
                     player: 'https://playercdn.cdnvideo.ru/aloha/players/auto_player1.html?clid=4f2trzpmbn&plid=0eb352f9-1854-4744-baf8-86957e93e5e2',
                     isDirectUrl: true
                 },
+                'ont': {
+                    title: 'ОНТ',
+                    description: 'Белорусский государственный телеканал, который предлагает разнообразный контент. Его эфир включает новостные выпуски, аналитические программы, документальные фильмы, а также развлекательные шоу и концерты. Среди популярных проектов — информационная программа "Наши новости", утренняя передача "Наше утро", а также различные музыкальные шоу и адаптации международных форматов.',
+                    player: 'https://stream.dc.beltelecom.by/ont/ont/playlist.m3u8'
+                },
+                'stv': {
+                    title: 'СТВ',
+                    description: 'Белорусский государственный телеканал, который специализируется на новостях, аналитических программах и общественно-политическом контенте. СТВ освещает события в Беларуси и мире, предлагая информационные выпуски, ток-шоу, документальные проекты и развлекательные программы. Среди известных программ — информационно-аналитическая программа "24 часа" и утреннее шоу "Утро. Студия хорошего настроения".',
+                    player: 'https://ctv.dc.beltelecom.by/ctv/ctv.stream/playlist.m3u8'
+                },
                 'cgtn': {
                     title: 'CGTN на русском',
                     description: 'Русскоязычный канал китайской международной медиасети CGTN. Канал предлагает новости, аналитические программы и документальные фильмы о Китае, а также освещает международные события с китайской точки зрения. Заметные программы включают "Репортаж из Китая" и "Фокус на Азию".',
@@ -114,6 +124,11 @@
                     title: 'Al Jazeera',
                     description: 'Международная медиасеть из Катара, которая предлагает новости, аналитику и документальные фильмы с акцентом на события на Ближнем Востоке. Известные программы — "Inside Story" и "Head to Head".',
                     player: 'https://live-hls-apps-aje-fa.getaj.net/AJE/index.m3u8'
+                },
+                'ard': {
+                    title: 'Das Erste',
+                    description: 'Немецкий общественный телеканал, являющийся основным каналом медиаконцерна ARD. Das Erste предлагает разнообразный контент, включая новости, текущие события, спортивные трансляции, документальные фильмы, развлекательные шоу и художественные сериалы. Среди известных программ — новостная передача "Tagesschau", политическое ток-шоу "Hart aber fair", а также популярные криминальные сериалы, такие как "Tatort".',
+                    player: 'https://viamotionhsi.netplus.ch/live/eds/daserstehd/browser-HLS8/daserstehd.m3u8'
                 },
                 'tnt': {
                     title: 'ТНТ',
@@ -150,6 +165,11 @@
                     title: 'Channel 4',
                     description: 'Британский общественный телеканал, известный своим инновационным и порой провокационным контентом. Среди его программ — документальные фильмы, комедийные и драматические сериалы. Значимые проекты — "The Great British Bake Off" и "Gogglebox".',
                     player: 'https://viamotionhsi.netplus.ch/live/eds/channel4/browser-HLS8/channel4.m3u8'
+                },
+                'zdf': {
+                    title: 'ZDF',
+                    description: 'ZDF (Zweites Deutsches Fernsehen) — это один из крупнейших общественных телеканалов Германии. Он предлагает широкий спектр программ, ориентированных на самую разную аудиторию. В его эфире можно найти новости и актуальные передачи, например, "heute-journal", документальные фильмы о природе, истории и науке, такие как "Terra X", а также развлекательные шоу, сериалы и художественные фильмы. Канал стремится предоставлять качественный и разнообразный контент, охватывающий как серьезные, так и развлекательные темы.',
+                    player: 'https://zdf-hls-15.akamaized.net/hls/live/2016498/de/high/master.m3u8'
                 }
             };
 
