--- a/index.html
+++ b/index.html
@@ -40,21 +40,33 @@
             <div class="column">
                 <h1>Информационные телеканалы</h1>
                 <h2>На русском</h2>
+                <div class="column">
                     <div class="row">
-                    <div class="row2">
-                        <a href="watch.html?v=ntv" class="tvplate" id="ntv"><img src="cdn/ntv.svg"></a>
-                        <a href="watch.html?v=rtvi" class="tvplate" id="rtvi"><img src="cdn/rtvi.svg"></a>
+                        <div class="row2">
+                            <a href="watch.html?v=ntv" class="tvplate" id="ntv"><img src="cdn/ntv.svg"></a>
+                            <a href="watch.html?v=rtvi" class="tvplate" id="rtvi"><img src="cdn/rtvi.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=m24" class="tvplate" id="m24"><img src="cdn/m24.svg"></a>
+                            <a href="watch.html?v=spb6" class="tvplate" id="spb6"><img src="cdn/6.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=bel1" class="tvplate" id="bel1"><img src="cdn/bel1.svg"></a>
+                            <a href="watch.html?v=bel2" class="tvplate" id="bel2"><img src="cdn/bel2.svg"></a>
+                        </div>
                     </div>
-                    <div class="row2">
-                        <a href="watch.html?v=m24" class="tvplate" id="m24"><img src="cdn/m24.svg"></a>
-                        <a href="watch.html?v=spb6" class="tvplate" id="spb6"><img src="cdn/6.svg"></a>
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=bel3" class="tvplate" id="bel3"><img src="cdn/bel3.svg"></a>
+                            <a href="watch.html?v=bel24" class="tvplate" id="bel24"><img src="cdn/bel24.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=ont" class="tvplate" id="ont"><img src="cdn/ont.svg" style="width: 100%;"></a>
+                            <a href="watch.html?v=stv" class="tvplate" id="stv"><img src="cdn/stv.svg" style="width: 80%;"></a>
+                        </div>
+                            <a href="watch.html?v=cgtn" class="tvplate" id="cgtn"><img src="cdn/cgtn.svg"></a>
                     </div>
-                    <div class="row2">
-                        <a href="watch.html?v=ont" class="tvplate" id="ont"><img src="cdn/ont.svg" style="width: 100%;"></a>
-                        <a href="watch.html?v=stv" class="tvplate" id="stv"><img src="cdn/stv.svg" style="width: 80%;"></a>
-                    </div>
-                        <a href="watch.html?v=cgtn" class="tvplate" id="cgtn"><img src="cdn/cgtn.svg"></a>
-                    </div>
+                </div>
                 <h2>На других языках</h2>
                 <div class="row">
                     <div class="row2">
@@ -94,6 +106,38 @@
                     <div class="row2">
                         <a href="watch.html?v=zdf" class="tvplate" id="zdf"><img src="cdn/zdf.svg"></a>
                         <a href="watch.html?v=ch4" class="tvplate" id="ch4"><img src="cdn/4.svg"></a>
+                    </div>
+                </div>
+                <h1>Региональные телеканалы</h1>
+                <h2>Россия</h2>
+                <div class="column">
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=sar24" class="tvplate" id="sar24"><img src="cdn/sar24.svg"></a>
+                            <a href="watch.html?v=seim" class="tvplate" id="seim"><img src="cdn/seim.svg"></a>
+                        </div>
+                        <div class="row2">
+                            <a href="watch.html?v=k24" class="tvplate" id="k24"><img src="cdn/k24.svg"></a>
+                            <a href="watch.html?v=chgtrk" class="tvplate" id="chgtrk"><img src="cdn/chgtrk.svg"></a>
+                        </div>  
+                    </div>
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=otv" class="tvplate" id="otv"><img src="cdn/otv.svg"></a>
+                            <a href="watch.html?v=aist" class="tvplate" id="aist"><img src="cdn/aist.svg"></a>
+                        </div>   
+                        <div class="row2">
+                            <a href="watch.html?v=tvk" class="tvplate" id="tvk"><img src="cdn/tvk.svg"></a>
+                            <a href="watch.html?v=otvprim" class="tvplate" id="otvprim"><img src="cdn/otvprim.svg"></a>
+                        </div>
+                    </div>
+                </div>
+                <h2>Беларусь</h2>
+                <div class="column">
+                    <div class="row">
+                        <div class="row2">
+                            <a href="watch.html?v=bel4" class="tvplate" id="bel4"><img src="cdn/bel4.svg"></a>
+                        </div>
                     </div>
                 </div>
             </div>
