--- a/watch.html
+++ b/watch.html
@@ -89,6 +89,26 @@
                     description: 'Белорусский государственный телеканал, который специализируется на новостях, аналитических программах и общественно-политическом контенте. СТВ освещает события в Беларуси и мире, предлагая информационные выпуски, ток-шоу, документальные проекты и развлекательные программы. Среди известных программ — информационно-аналитическая программа "24 часа" и утреннее шоу "Утро. Студия хорошего настроения".',
                     player: 'https://ctv.dc.beltelecom.by/ctv/ctv.stream/playlist.m3u8'
                 },
+                'bel1': {
+                    title: 'Беларусь 1',
+                    description: '«Беларусь 1» — главный государственный телеканал страны, который является основным источником новостей и информации для широкой аудитории. В его эфире преобладают новостные выпуски, информационно-аналитические программы, а также документальные проекты и прямые трансляции значимых государственных событий. Канал также транслирует популярные сериалы, фильмы и крупные спортивные мероприятия.',
+                    player: 'https://ngtrk.dc.beltelecom.by/ngtrk/smil:belarus1.smil/playlist.m3u8'
+                },
+                'bel2': {
+                    title: 'Беларусь 2',
+                    description: '«Беларусь 2» — развлекательный телеканал, ориентированный на молодежную аудиторию и тех, кто ищет легкий и позитивный контент. Его программа состоит из сериалов, художественных и документальных фильмов, а также юмористических и музыкальных шоу. Главная цель канала — развлекать и предлагать разнообразный контент для отдыха.',
+                    player: 'https://ngtrk.dc.beltelecom.by/ngtrk/smil:belarus2/playlist.m3u8',
+                },
+                'bel3': {
+                    title: 'Беларусь 3',
+                    description: '«Беларусь 3» — это первый белорусский социокультурный телеканал. Его эфир посвящен истории, культуре и искусству Беларуси. Здесь можно найти документальные фильмы, посвященные истории страны, трансляции спектаклей и концертов, образовательные программы, а также проекты о выдающихся деятелях культуры и искусства. Канал создан для тех, кто интересуется историей и культурным наследием Беларуси.',
+                    player: 'https://ngtrk.dc.beltelecom.by/ngtrk/smil:belarus3/playlist.m3u8',
+                },
+                'bel24': {
+                    title: 'Беларусь 24',
+                    description: '«Беларусь 24» — международный спутниковый телеканал, который вещает за пределами Беларуси. Его основная задача — информировать русскоязычную аудиторию по всему миру о событиях в стране, ее культуре и обществе. Эфир «Беларусь 24» состоит из новостных блоков, аналитических передач, а также лучших документальных и художественных фильмов, произведенных в Беларуси.',
+                    player: 'https://ngtrk.dc.beltelecom.by/ngtrk/smil:belarus24/playlist.m3u8',
+                },
                 'cgtn': {
                     title: 'CGTN на русском',
                     description: 'Русскоязычный канал китайской международной медиасети CGTN. Канал предлагает новости, аналитические программы и документальные фильмы о Китае, а также освещает международные события с китайской точки зрения. Заметные программы включают "Репортаж из Китая" и "Фокус на Азию".',
@@ -169,7 +189,58 @@
                     title: 'ZDF',
                     description: 'ZDF (Zweites Deutsches Fernsehen) — это один из крупнейших общественных телеканалов Германии. Он предлагает широкий спектр программ, ориентированных на самую разную аудиторию. В его эфире можно найти новости и актуальные передачи, например, "heute-journal", документальные фильмы о природе, истории и науке, такие как "Terra X", а также развлекательные шоу, сериалы и художественные фильмы. Канал стремится предоставлять качественный и разнообразный контент, охватывающий как серьезные, так и развлекательные темы.',
                     player: 'https://zdf-hls-15.akamaized.net/hls/live/2016498/de/high/master.m3u8'
-                }
+                },
+                'sar24': {
+                    title: 'Саратов 24',
+                    description: 'Региональный телеканал Саратовской области',
+                    player: 'https://ok.ru/videoembed/5102355095276',
+                    isDirectUrl: true
+                },
+                'seim': {
+                    title: 'Сейм',
+                    description: 'Региональный телеканал Курской области',
+                    player: 'https://vk.com/video_ext.php?oid=-84923713&id=456248329&hash=f4211f48f9f734c3',
+                    isDirectUrl: true
+                },
+                'k24': {
+                    title: 'Кубань 24',
+                    description: 'Региональный телеканал Краснодарского края',
+                    player: 'https://ok.ru/videoembed/4157442498242?nochat=1&mute=0',
+                    isDirectUrl: true
+                },
+                'chgtrk': {
+                    title: 'ЧГТРК Грозный',
+                    description: 'Региональный телеканал Чеченской Республики',
+                    player: 'https://player.facecast.io/chgtrk',
+                    isDirectUrl: true
+                },
+                'otv': {
+                    title: 'ОТВ (Екатеринбург)',
+                    description: 'Региональный телеканал Свердловской области',
+                    player: 'https://vd.obltv.ru/player/video.html',
+                    isDirectUrl: true
+                },
+                'aist': {
+                    title: 'Аист',
+                    description: 'Региональный телеканал Иркутской области',
+                    player: 'https://live2-aisttv.cdnvideo.ru/aisttv2/aisttv.sdp/playlist.m3u8'
+                },
+                'tvk': {
+                    title: 'ТВК',
+                    description: 'Региональный телеканал Красноярского края',
+                    player: 'https://air.tvk6.ru/tvk24/tracks-v2a1/mono.m3u8'
+                },
+                'otvprim': {
+                    title: 'ОТВ (Приморье)',
+                    description: 'Региональный телеканал Приморья',
+                    player: 'https://ok.ru/videoembed/3503444925978',
+                    isDirectUrl: true
+                },
+                'bel4': {
+                    title: 'Беларусь 4 Витебск',
+                    description: 'Региональный телеканал Витебской области',
+                    player: 'https://live.dc.beltelecom.by/vtv/bt4.stream/playlist.m3u8'
+                },
             };
 
             const video = channels[channelId] || {
