--- a/index.html
+++ b/index.html
@@ -51,16 +51,6 @@
                             <a href="watch.html?v=spb6" class="tvplate" id="spb6"><img src="cdn/6.svg"></a>
                         </div>
                         <div class="row2">
-                            <a href="watch.html?v=bel1" class="tvplate" id="bel1"><img src="cdn/bel1.svg"></a>
-                            <a href="watch.html?v=bel2" class="tvplate" id="bel2"><img src="cdn/bel2.svg"></a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="row2">
-                            <a href="watch.html?v=bel3" class="tvplate" id="bel3"><img src="cdn/bel3.svg"></a>
-                            <a href="watch.html?v=bel24" class="tvplate" id="bel24"><img src="cdn/bel24.svg"></a>
-                        </div>
-                        <div class="row2">
                             <a href="watch.html?v=ont" class="tvplate" id="ont"><img src="cdn/ont.svg" style="width: 100%;"></a>
                             <a href="watch.html?v=stv" class="tvplate" id="stv"><img src="cdn/stv.svg" style="width: 80%;"></a>
                         </div>
@@ -70,19 +60,25 @@
                 <h2>На других языках</h2>
                 <div class="row">
                     <div class="row2">
-                    <a href="watch.html?v=rt" class="tvplate" id="rt"><img src="cdn/rt.svg"></a>
-                    <a href="watch.html?v=cnn" class="tvplate" id="cnn"><img src="cdn/cnn.svg"></a>
+                        <a href="watch.html?v=bel1" class="tvplate" id="bel1"><img src="cdn/bel1.svg"></a>
+                        <a href="watch.html?v=bel24" class="tvplate" id="bel24"><img src="cdn/bel24.svg"></a>
                     </div>
                     <div class="row2">
-                    <a href="watch.html?v=fox" class="tvplate" id="fox"><img src="cdn/fox.svg"></a>
-                    <a href="watch.html?v=bbc" class="tvplate" id="bbc"><img src="cdn/bbc.svg"></a>
+                        <a href="watch.html?v=rt" class="tvplate" id="rt"><img src="cdn/rt.svg"></a>
+                        <a href="watch.html?v=cnn" class="tvplate" id="cnn"><img src="cdn/cnn.svg"></a>
                     </div>
                     <div class="row2">
-                    <a href="watch.html?v=eu" class="tvplate" id="eu"><img src="cdn/eu.svg"></a>
-                    <a href="watch.html?v=ard" class="tvplate" id="ard"><img src="cdn/ard.svg"></a>
+                        <a href="watch.html?v=fox" class="tvplate" id="fox"><img src="cdn/fox.svg"></a>
+                        <a href="watch.html?v=bbc" class="tvplate" id="bbc"><img src="cdn/bbc.svg"></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="row2">
+                        <a href="watch.html?v=eu" class="tvplate" id="eu"><img src="cdn/eu.svg"></a>
+                        <a href="watch.html?v=ard" class="tvplate" id="ard"><img src="cdn/ard.svg"></a>
                     </div>
                     <div class="row2">
-                    <a href="watch.html?v=alj" class="tvplate" id="alj"><img src="cdn/alj.svg"></a>
+                        <a href="watch.html?v=alj" class="tvplate" id="alj"><img src="cdn/alj.svg"></a>
                     </div>
                 </div>
                 <h1>Развлекательные телеканалы</h1>
@@ -99,6 +95,10 @@
                 </div>
                 <h2>На других языках</h2>
                 <div class="row">
+                    <div class="row2">
+                        <a href="watch.html?v=bel2" class="tvplate" id="bel2"><img src="cdn/bel2.svg"></a>
+                       <a href="watch.html?v=bel3" class="tvplate" id="bel3"><img src="cdn/bel3.svg"></a>
+                    </div>
                     <div class="row2">
                         <a href="watch.html?v=mtv" class="tvplate" id="mtv"><img src="cdn/mtv.svg"></a>
                         <a href="watch.html?v=his" class="tvplate" id="his"><img src="cdn/his.svg"></a>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                 </div>
-                <h2>Беларусь</h2>
+                <h2>Беларусь и Украина</h2>
                 <div class="column">
                     <div class="row">
                         <div class="row2">
