--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <div class="box">
         <div class="content" style="margin: 5em 10em">
             <h1>О Ether</h1>
-            Ether - это IPTV-платформа, на которой доступно уже 18 телеканалов. Все трансляции используют официальные источники. Смотрите телевидение? Ether удобнее!
+            Ether - это IPTV-платформа, на которой доступно уже 18 телеканалов. Все трансляции используют официальные источники. Смотрите телевидение? Ether удобнее!<br>Некоторые каналы могут быть недоступны в зависимости от вашего местоположения.
         </div>
 </body>
 </html>
