--- a/watch.html
+++ b/watch.html
@@ -89,6 +89,16 @@
                     description: 'Белорусский государственный телеканал, который специализируется на новостях, аналитических программах и общественно-политическом контенте. СТВ освещает события в Беларуси и мире, предлагая информационные выпуски, ток-шоу, документальные проекты и развлекательные программы. Среди известных программ — информационно-аналитическая программа "24 часа" и утреннее шоу "Утро. Студия хорошего настроения".',
                     player: 'https://ctv.dc.beltelecom.by/ctv/ctv.stream/playlist.m3u8'
                 },
+                'fd': {
+                    title: 'Freeдом',
+                    description: '«Freedom» — это украинский русскоязычный информационный телеканал, который был создан в 2022 году на базе единого телемарафона «Єдині новини». Его основная задача — доносить информацию о событиях в Украине, ее позиции и борьбе против российской агрессии до русскоязычной аудитории за пределами Украины. Канал транслирует новости, аналитику, интервью и документальные фильмы, разоблачая российскую пропаганду и рассказывая правду о войне.',
+                    player: 'https://freedom.cdn-01.cosmonova.net.ua/mobile-app/main/freedom/master.m3u8'
+                },
+                'tvr': {
+                    title: 'Дождь',
+                    description: '«Дождь» — российский независимый информационный телеканал. Его эфир состоит из новостных программ, аналитических передач, журналистских расследований и прямых трансляций общественно-политических событий. Канал известен своей критической позицией и освещением тем, которые редко обсуждаются на государственном телевидении. В настоящее время «Дождь» вещает из-за рубежа, преимущественно через интернет-платформы.',
+                    player: 'https://wl.tvrain.tv/transcode/ngrp:ses_all/playlist.m3u8'
+                },
                 'bel1': {
                     title: 'Беларусь 1',
                     description: '«Беларусь 1» — главный государственный телеканал страны, который является основным источником новостей и информации для широкой аудитории. В его эфире преобладают новостные выпуски, информационно-аналитические программы, а также документальные проекты и прямые трансляции значимых государственных событий. Канал также транслирует популярные сериалы, фильмы и крупные спортивные мероприятия.',
@@ -149,6 +159,24 @@
                     description: 'Немецкий общественный телеканал, являющийся основным каналом медиаконцерна ARD. Das Erste предлагает разнообразный контент, включая новости, текущие события, спортивные трансляции, документальные фильмы, развлекательные шоу и художественные сериалы. Среди известных программ — новостная передача "Tagesschau", политическое ток-шоу "Hart aber fair", а также популярные криминальные сериалы, такие как "Tatort".',
                     player: 'https://viamotionhsi.netplus.ch/live/eds/daserstehd/browser-HLS8/daserstehd.m3u8'
                 },
+                'belsat': {
+                    title: 'Belsat',
+                    description: 'Belsat TV — независимый телеканал, который был создан как альтернатива государственному телевидению в Беларуси. Он вещает на белорусском и русском языках. Основное направление — это новости, документальные фильмы, культурные и общественно-политические программы, которые рассказывают о жизни в Беларуси, ее истории, культуре и политических процессах. Канал финансируется Польским телевидением и ориентирован на белорусскую аудиторию как внутри страны, так и за ее пределами.',
+                    player: 'https://www.youtube.com/embed/YA9ukP4k_Fk',
+                    isDirectUrl: true
+                },
+                '1p1': {
+                    title: '1+1',
+                    description: 'Один из крупнейших и наиболее влиятельных каналов в Украине, известный своими новостными программами, политическими ток-шоу, а также популярными развлекательными проектами, сериалами и фильмами.',
+                    player: 'https://www.youtube.com/embed/lnrp2S2L6qk',
+                    isDirectUrl: true
+                },
+                'ch24': {
+                    title: '24 канал',
+                    description: '24 канал — украинский круглосуточный информационный телеканал. Его основная задача — оперативно и объективно освещать новости из Украины и мира. В его эфире транслируются новостные выпуски каждый час, аналитические программы, журналистские расследования, а также прямые включения с мест событий. Канал известен своим фокусом на политической и общественной тематике, предоставляя зрителю широкий спектр мнений и экспертных оценок.',
+                    player: 'https://embed-player.dyvy.tv/?channel=24-kanal&autoplay=true&mode=compact&provider-id=777905',
+                    isDirectUrl: true
+                },
                 'tnt': {
                     title: 'ТНТ',
                     description: 'Российский развлекательный телеканал, который фокусируется на комедийных сериалах, юмористических шоу и реалити-проектах. Среди самых известных программ — "Универ", "Танцы" и "Comedy Club".',
@@ -169,6 +197,16 @@
                     title: 'Перец International',
                     description: 'Международный развлекательный канал, ориентированный на русскоязычную аудиторию. Он транслирует развлекательные шоу, юмористические программы и реалити-шоу.',
                     player: 'https://cdn4.skygo.mn/live/disk1/Che/HLSv3-FTA/Che.m3u8'
+                },
+                '2p2': {
+                    title: '2+2',
+                    description: '«2+2» — украинский телеканал, который входит в медиахолдинг «1+1 Media». Он ориентирован преимущественно на мужскую аудиторию и известен своим фокусом на развлекательном и приключенческом контенте. В его эфире транслируются боевики, детективы, триллеры и сериалы. Канал также уделяет большое внимание спортивным событиям, показывая трансляции футбольных матчей, боксёрских поединков и других соревнований.',
+                    player: 'https://s.tivix.co/Y4SBSL_tbyvH9mun6_QSQw/238/1757820902/index.m3u8'
+                },
+                'stb': {
+                    title: 'СТБ',
+                    description: 'Этот канал известен своими крупными и популярными талант-шоу и реалити-проектами, например, «Х-Фактор» и «Холостяк». Также он транслирует сериалы и фильмы собственного производства.',
+                    player: 'https://s.xittv.net/9Co5BFrmhNZeZyRXayVWpg/101/1757820746/index.m3u8'
                 },
                 'mtv': {
                     title: 'MTV Live',
@@ -241,6 +279,23 @@
                     description: 'Региональный телеканал Витебской области',
                     player: 'https://live.dc.beltelecom.by/vtv/bt4.stream/playlist.m3u8'
                 },
+                'zahid': {
+                    title: 'Перший Західний',
+                    description: 'Региональный телеканал Львовской области',
+                    player: 'https://live-1zahid-1.mw-01.cosmonova-broadcast.tv/player',
+                    isDirectUrl: true
+                },
+                'ch11': {
+                    title: '11 канал',
+                    description: 'Региональный телеканал Днепропетровской области',
+                    player: 'https://live-11tv-dp.cosmonova.net.ua/online.php',
+                    isDirectUrl: true
+                },
+                'mis': {
+                    title: 'Перший міський',
+                    description: 'Региональный телеканал Одессы',
+                    player: 'https://live.1tv.od.ua/stream1/channel1/playlist.m3u8'
+                }
             };
 
             const video = channels[channelId] || {
