--- a/watch.html
+++ b/watch.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Ether</title>
+    <title>Ether - Смотреть телевидение онлайн</title>
+    <meta name="description" content="Ether - это бесплатный плеер IPTV. Доступно уже больше 40 каналов. Все трансляции используют официальные источники. Смотрите телевидение? Ether лучше!">
+    <meta property="og:image" content="/media/cover.png">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="media/etherfav.svg">
     <meta name="theme-color" content="#4B4F9C" media="(prefers-color-scheme: light)">
@@ -297,6 +299,13 @@
                     player: 'https://live.1tv.od.ua/stream1/channel1/playlist.m3u8'
                 }
             };
+
+            // Set the page title based on the URL parameter 'v'
+            if (channelId && channels[channelId]) {
+                document.title = `Смотреть ${channels[channelId].title} онлайн бесплатно`;
+            } else {
+                document.title = 'Смотреть каналы онлайн бесплатно';
+            }
 
             const video = channels[channelId] || {
                 title: 'Ошибка',
