--- a/about.html
+++ b/about.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Ether</title>
+    <title>Ether - Смотреть телевидение онлайн</title>
+    <meta name="description" content="Ether - это бесплатный плеер IPTV. Доступно уже больше 40 каналов. Все трансляции используют официальные источники. Смотрите телевидение? Ether лучше!">
+    <meta property="og:image" content="/media/cover.png">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="media/etherfav.svg">
+    <link rel="apple-touch-icon" href="media/etherfav.svg">
     <meta name="theme-color" content="#4B4F9C" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#4B4F9C" media="(prefers-color-scheme: dark)">
 </head>
@@ -18,8 +21,7 @@
     </div>
     <div class="box">
         <div class="content" style="margin: 5em 10em">
-            <h1>О Ether</h1>
-            Ether - это IPTV-платформа, на которой доступно уже 18 телеканалов. Все трансляции используют официальные источники. Смотрите телевидение? Ether удобнее!<br>Некоторые каналы могут быть недоступны в зависимости от вашего местоположения.
+            Ether - это бесплатный плеер IPTV. Доступно уже больше 40 каналов. Все трансляции используют официальные источники. Смотрите телевидение? Ether лучше!<br>Некоторые каналы могут быть недоступны в зависимости от вашего местоположения.
         </div>
 </body>
 </html>
