--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="/media/cover.png">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="media/etherfav.svg">
-    <link rel="apple-touch-icon" href="media/etherfav.svg">
+    <link rel="apple-touch-icon" href="media/ethericon.png">
     <meta name="theme-color" content="#4B4F9C" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#4B4F9C" media="(prefers-color-scheme: dark)">
 </head>
