--- a/watch.html
+++ b/watch.html
@@ -68,7 +68,7 @@
                 'rtvi': {
                     title: 'RTVI',
                     description: 'Международный русскоязычный телеканал, вещающий на страны Европы, Северной Америки и Израиль. Канал предлагает информационно-аналитические программы, а также документальные фильмы и ток-шоу, направленные на русскоязычную аудиторию за пределами России. Среди известных программ — "Вы держитесь", "Большой Newstalk", "Новые Итоги", "Американское Утро", "Дежурный по Америке".',
-                    player: 'https://server.musical.uz/tv/rtvi/index.m3u8?token=250c9f83fc09e99c2442da678c87f1abb6ce494a-b0c46e1828794a0518597857f09c312d-1757795104-1757784304'
+                    player: 'http://89.23.113.170:8081/iptv/rtvi-channel/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9OS8xNC8yMDI1IDEwOjA1OjE1IEFNJmhhc2hfdmFsdWU9M1Z4clNIRXhRZk5nTFE1bWkwN3FmZz09JnZhbGlkbWludXRlcz0xMDA='
                 },
                 'm24': {
                     title: 'Москва 24',
