--- a/watch.html
+++ b/watch.html
@@ -68,7 +68,8 @@
                 'rtvi': {
                     title: 'RTVI',
                     description: 'Международный русскоязычный телеканал, вещающий на страны Европы, Северной Америки и Израиль. Канал предлагает информационно-аналитические программы, а также документальные фильмы и ток-шоу, направленные на русскоязычную аудиторию за пределами России. Среди известных программ — "Вы держитесь", "Большой Newstalk", "Новые Итоги", "Американское Утро", "Дежурный по Америке".',
-                    player: 'http://89.23.113.170:8081/iptv/rtvi-channel/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9OS8xNC8yMDI1IDEwOjA1OjE1IEFNJmhhc2hfdmFsdWU9M1Z4clNIRXhRZk5nTFE1bWkwN3FmZz09JnZhbGlkbWludXRlcz0xMDA='
+                    player: 'http://tvin.su/players/wms.php?target=http://89.23.113.170:8081/iptv/rtvi-channel/playlist.m3u8',
+                    isDirectUrl: true
                 },
                 'm24': {
                     title: 'Москва 24',
