--- a/watch.html
+++ b/watch.html
@@ -68,7 +68,7 @@
                 'rtvi': {
                     title: 'RTVI',
                     description: 'Международный русскоязычный телеканал, вещающий на страны Европы, Северной Америки и Израиль. Канал предлагает информационно-аналитические программы, а также документальные фильмы и ток-шоу, направленные на русскоязычную аудиторию за пределами России. Среди известных программ — "Вы держитесь", "Большой Newstalk", "Новые Итоги", "Американское Утро", "Дежурный по Америке".',
-                    player: 'http://tvin.su/players/wms.php?target=http://89.23.113.170:8081/iptv/rtvi-channel/playlist.m3u8',
+                    player: 'https://tvin.su/players/wms.php?target=https://89.23.113.170:8081/iptv/rtvi-channel/playlist.m3u8',
                     isDirectUrl: true
                 },
                 'm24': {
