--- a/watch.html
+++ b/watch.html
@@ -68,8 +68,7 @@
                 'rtvi': {
                     title: 'RTVI',
                     description: 'Международный русскоязычный телеканал, вещающий на страны Европы, Северной Америки и Израиль. Канал предлагает информационно-аналитические программы, а также документальные фильмы и ток-шоу, направленные на русскоязычную аудиторию за пределами России. Среди известных программ — "Вы держитесь", "Большой Newstalk", "Новые Итоги", "Американское Утро", "Дежурный по Америке".',
-                    player: 'https://tvin.su/players/wms.php?target=https://89.23.113.170:8081/iptv/rtvi-channel/playlist.m3u8',
-                    isDirectUrl: true
+                    player: 'https://server.musical.uz/tv/rtvi/index.m3u8?token=e243491dccbf2b714dde97004e4afc3190fac512-4d78301118543037ba48a4da67359efd-1757855350-1757844550'
                 },
                 'm24': {
                     title: 'Москва 24',
